--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -9,17 +9,17 @@
       <div class="mr-auto">
         <div class="g-ytsubscribe" data-channel="sanderson1611" data-layout="full" data-count="default"></div>
         <br>
-        <%= ytube_embed 'VLM8PSL1TkU', 440, 260 %>
+        <%= ytube_embed 'live_stream?channel=UCq7BdmVpQsay5XrwOgMhN5w', 440, 260 %>
       </div>
       <div>
         <div class="g-ytsubscribe" data-channelid="UCTh8KEvQAwMuJI0_zwdqVIg" data-layout="full" data-count="default"></div>
         <br>
-        <%= ytube_embed '0jyGhuQn8VQ', 440, 260 %>
+        <%= ytube_embed 'live_stream?channel=UCTh8KEvQAwMuJI0_zwdqVIg', 440, 260 %>
       </div>
       <div>
         <div class="g-ytsubscribe" data-channel="sanderson1769" data-layout="full" data-count="default"></div>
         <br>
-        <%= ytube_embed '0H9gnM0rzF0', 440, 260 %>
+        <%= ytube_embed 'live_stream?channel=UCXwisZfKRg4fSmWRErSvLhA', 440, 260 %>
       </div>
     </div>
   </div>
