--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -372,6 +372,10 @@ a:hover {
   font-weight: bold;
 }
 
+.browse-recent a {
+  font-size: 10px !important; 
+}
+
 .side-column {
   margin-right: 20px;
 }
