--- a/app/views/layouts/_top_banner.html.erb
+++ b/app/views/layouts/_top_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= admin? ? "bg-danger" : "bg-inverse"%> py-1">
+<div class="<%= admin? ? "bg-danger" : "bg-inverse"%> sticky-top py-1">
   <div id="central-top">
     <div class="d-flex justify-content-between">
         <%= link_to 'Faithful Word Baptist Church | Tempe, Arizona', root_path, class: "text-silent" %>
