--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <%= yield %>
       </div>
       <%= render 'layouts/footer' %>
+      <%= render 'shared/alerts' %>
     </div>
   </body>
 </html>
