--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Cinzel');
-
+@import "gritter";
 #central {
     margin-right: auto;
     margin-left: auto;
@@ -644,4 +644,128 @@ RADIO STYLING
 
 .radio-schedule h6 {
   font-weight: 800;
+}
+
+/*------------------------------------------------------------------
+GRITTER CSS ALERTS
+--------------------------------------------------------------------*/
+#gritter-notice-wrapper {
+  position:fixed;
+  top:20px;
+  right:20px;
+  width:301px;
+  z-index:9999;
+  
+  &.top-left {
+    left: 20px;
+    right: auto;
+  }
+  
+  &.bottom-right {
+    top: auto;
+    left: auto;
+    bottom: 20px;
+    right: 20px;
+  }
+  
+  &.bottom-left {
+    top: auto;
+    right: auto;
+    bottom: 20px;
+    left: 20px;
+  }
+}
+
+.gritter-item-wrapper {
+  position:relative;
+  margin:0 0 10px 0;
+  background:url(asset-url('ie-spacer.gif')); // ie7/8 fix
+}
+
+.gritter-top {
+  background:url(asset-url('gritter.png')) no-repeat left -30px;
+  height:10px;
+}
+.hover .gritter-top {
+  background-position:right -30px;
+}
+.gritter-bottom {
+  background:url(asset-url('gritter.png')) no-repeat left bottom;
+  height:8px;
+  margin:0;
+}
+.hover .gritter-bottom {
+  background-position: bottom right;
+}
+
+.gritter-item {
+  display:block;
+  color: black;
+  padding:2px 11px 8px 11px;
+  font-size: 11px;
+  filter:inherit; // ie8 fix
+  
+  &.gritter-css2 {
+    background:url(asset-url('gritter.png')) no-repeat left -40px;
+  }
+  &.gritter-css3 {
+    background: #eaeaea;
+    opacity: 1.0;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border: 2px solid #999;
+    border-radius: 0px;
+    padding-top: 12px;
+    padding-bottom: 16px;
+  }
+  
+  p {
+    padding:0;
+    margin:0;
+  }
+}
+.hover .gritter-item.gritter-css2 {
+  background-position:right -40px;
+}
+.hover .gritter-item.gritter-css3 {
+  padding: 12px auto 16px auto;
+  border: solid 2px #fff;
+}
+
+.gritter-close {
+  display:none;
+  position:absolute;
+  top:5px;
+  left:3px;
+  cursor:pointer;
+  width:30px;
+  height:30px;
+  filter:inherit; // ie8 fix
+}
+.gritter-css2 .gritter-close {
+  background:url(asset-url('gritter.png')) no-repeat left top;
+}
+.gritter-css3 .gritter-close {
+  background:url(asset-url('gritter-close.png')) no-repeat;
+}
+
+.gritter-title {
+  font-size:14px;
+  font-weight:bold;
+  padding:0 0 7px 0;
+  display:block;
+  text-shadow: none; /* Not supported by IE :( */
+}
+.gritter-image {
+  width:48px;
+  height:48px;
+  float:left;
+}
+.gritter-with-image,
+.gritter-without-image {
+  padding:0 0 5px 0;
+}
+.gritter-with-image {
+  width:220px;
+  float:right;
 }
