--- a/app/views/pages/psalms.html.erb
+++ b/app/views/pages/psalms.html.erb
@@ -3,18 +3,17 @@
   <%= render "shared/side-bar" %>
   <div>
     <h4>Psalms Project</h4>
-    <p>
-    It is extremely difficult to find any psalms from the King James Bible that have been put to music without altering the text. Those that have been put to music are usually only a few verses long, and not the entire psalm. Pastor Anderson's goal is to put all 150 psalms to music without changing a single word of the KJV text. Check back at this page for new additions to the repertoire as the project moves forward.
-    </p>
+    <p>It is extremely difficult to find any psalms from the King James Bible that have been put to music without altering the text. Those that have been put to music are usually only a few verses long, and not the entire psalm. Pastor Anderson's goal is to put all 150 psalms to music without changing a single word of the KJV text.</p>
+    <p>Another criterion for these psalms is that they be easy to learn, and that they be in a style similar to traditional hymns (i.e. not sounding like pop music or CCM). This is accomplished by organizing the words of the psalm into verses and chorus. For example, with Psalm 67, there are 3 verses and a chorus that repeats 3 times. With Psalm 11, there is no chorus, but the basic tune repeats 8 times. This repetition is necessary to making the psalm easy to learn. If the tune changes throughout the song, it will be very difficult to learn.</p>
+    <p>Check back at this page for new additions to the repertoire as the project moves forward.</p>
     <h5>Sheet Music of Completed Psalms:</h5>
     <a href="http://www.faithfulwordbaptist.org/psalm015.pdf">Psalm 15</a><br>
     <a href="http://www.faithfulwordbaptist.org/psalm096.pdf">Psalm 96</a><br>
     <a href="http://www.faithfulwordbaptist.org/psalm117.pdf">Psalm 117</a>
     <h5>Sheet Music of Easier Versions:</h5>
     <a href="http://www.faithfulwordbaptist.org/psalm015basic.pdf">Psalm 15</a>
-    <h4>Videos of Completed Psalms:</h4>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Y5JlTGPJ-B8" frameborder="0" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/HqSom-vCbcI" frameborder="0" allowfullscreen></iframe>
+    <h5>Video Playlist of Completed Psalms:</h5>
+    <%= ytube_embed 'videoseries?list=PL4oPLNtP6_eeEVC1VaY_FFrLPowleAlqQ', 560, 315 %>
     <blockquote class="verse">
     <p class="mb-0">“Let the word of Christ dwell in you richly in all wisdom; teaching and admonishing one another in psalms and hymns and spiritual songs, singing with grace in your hearts to the Lord.”</p>
     <p>Colossians 3:16</p>
