--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -23,10 +23,10 @@
     <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "browse-link", target: '_blank' %>
   </div>
   
-  <div class="browse-side-column browse-recent">
+  <!--<div class="browse-side-column browse-recent">
   <% Sermon.sorted.limit(5).each do |sermon| %>
     <%= link_to sermon.title, sermon_path(sermon), class: "browse-link" %>
   <% end %>
-  </div>
+  </div>-->
   
 </div>
