--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -26,12 +26,12 @@
   <% end %>
 </div>
 
-<table class="box-table-a">
+<table class="sermon-table">
   <colgroup>
     <col width='13%'>
-    <col width='55%'>
+    <col width='57%'>
     <col width="22%">
-    <col width="10%">
+    <col width="8%">
   </colgroup>
   <thead>
     <tr>
