--- a/app/views/preaching/index.js.erb
+++ b/app/views/preaching/index.js.erb
@@ -1,1 +1,2 @@
-$("#sermons").html("<%= escape_javascript(render("sermons_search")) %>");
+$("#sermons").html("<%= !params[:year].nil? ? escape_javascript(render("sermons")) : escape_javascript(render("sermons_search")) %>");
+$("#noResults").html("<%= escape_javascript(render("no_results")) %>")
