--- a/app/views/preaching/_sermons_search.html.erb
+++ b/app/views/preaching/_sermons_search.html.erb
@@ -1,24 +1,30 @@
-<% @sermons.each do |sermon| %>
+<% if @sermons.blank? %>
   <tr>
-    <td><%= sermon.datetime.strftime("%m/%d/%y, %a %p")%></td>
-    <td><%= image_tag 'fire.gif', style: "padding-right: 8px" if sermon.fire_hard %><%= link_to sermon.title, sermon_path(sermon) %></td>
-    <td><%= sermon.preacher %></td>
-    <td>
-      <div>
-        <%= link_to sermon.mp3.url, class: "download", download: '', id: sermon.id do %>
-          <%= image_tag "icons/mp3_16x16.gif"%>
-        <% end %>
-        <% if !sermon.ytube_id.blank? %>
-          <%= link_to "https://www.youtube.com/watch?v=#{sermon.ytube_id}" do %>
-            <%= image_tag "icons/ytube_16x16.gif"%>
-          <% end %>
-        <% end %>
-        <% if !sermon.scloud.blank? %>
-          <%= link_to "#{sermon.scloud}" do %>
-            <%= image_tag "icons/soundcloud_16x16.gif"%>
-          <% end %>
-        <% end %>
-      </div>
-    </td>
+    <td colspan="4"><h5 class="mb-0" align="middle">No Results Found</h5></td>
   </tr>
+<% else %>
+  <% @sermons.each do |sermon| %>
+    <tr>
+      <td><%= sermon.datetime.strftime("%m/%d/%y, %a %p")%></td>
+      <td><%= image_tag 'fire.gif', style: "padding-right: 8px" if sermon.fire_hard %><%= link_to sermon.title, sermon_path(sermon) %></td>
+      <td><%= sermon.preacher %></td>
+      <td>
+        <div>
+          <%= link_to sermon.mp3.url, class: "download", download: '', id: sermon.id do %>
+            <%= image_tag "icons/mp3_16x16.gif"%>
+          <% end %>
+          <% if !sermon.ytube_id.blank? %>
+            <%= link_to "https://www.youtube.com/watch?v=#{sermon.ytube_id}" do %>
+              <%= image_tag "icons/ytube_16x16.gif"%>
+            <% end %>
+          <% end %>
+          <% if !sermon.scloud.blank? %>
+            <%= link_to "#{sermon.scloud}" do %>
+              <%= image_tag "icons/soundcloud_16x16.gif"%>
+            <% end %>
+          <% end %>
+        </div>
+      </td>
+    </tr>
+  <% end %>
 <% end %>
