--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -14,13 +14,12 @@
     <button type="button" class="sky-btn" data-toggle="modal" data-target="#exampleModal">Upload Sermon</button>
   <% end %>
 </div>
+<div class="d-flex justify-content-center">
+  <% @years.reverse.each do |year| %>
+    <button class="yellow-btn" style="margin-right: 4px" id="year" action="/preaching"><%= year %></button>
+  <% end %>
+</div>
 <div class="d-flex align-items-center">
-  <div class="d-flex">
-    <% @years.reverse.each do |year| %>
-      <button class="yellow-btn" style="margin-right: 4px" id="year" action="/preaching"><%= year %></button>
-      <%#= link_to "#{year}", preaching_path(year: year), class: "yellow-btn", style: 'margin-right: 4px' %>
-    <% end %>
-  </div>
   <%= form_tag preaching_path, :method => 'get', :id => "sermon_search", class: 'd-flex bar2-search' do %>
     <%= text_field_tag :search, params[:search], autocomplete: "off", class: 'form-control form-control-small', placeholder: "Search for Sermon" %>
     <%= submit_tag 'Search', :name => nil, class: 'yellow-btn' %>
@@ -47,9 +46,6 @@
   </tbody>
 </table>
 
-<div id="noResults" align="middle">
-</div>
-
 <div class="mt-2" id="spinner" style="display: none">
   <%= image_tag 'load.gif', class: "d-block mx-auto", width: 64 %>
 </div>
@@ -70,25 +66,34 @@
   <% end %>
 </div>
 <script>
-  $(".download").on("click", function() {
-      $.ajax({
-          url: "/download",
-          data: {id: $(this).attr("id")},
-          success: function(response, status) {
-                console.log(status);
-          },
-          error: function(data) {
-              alert("Sorry, there was an error!");
-          }
-      });
+  $(".download").click(function() {
+    $.ajax({
+      method: 'POST',
+      url: "/download",
+      data: {id: $(this).attr("id")}
+    })
+    .done(function(response, status) {
+      console.log(status);
+    })
+    .fail(function(data) {
+      alert("Sorry, there was an error!");
+    });
   });
+  
   $(function() {
     $("#sermon_search").submit(function() {
       $('#sermons').hide();
-      $('#noResults').hide();
       $('#spinner').show();
-      console.log($(this).serialize());
-      $.get(this.action, $(this).serialize(), function(){$('#spinner').hide(); $('#sermons').show();$('#noResults').show();}, "script");
+      $.ajax({
+        method: 'GET',
+        url: this.action,
+        data: $(this).serialize(),
+        dataType: "script"
+      })
+      .done(function(){
+        $('#spinner').hide();
+        $('#sermons').show();
+      });
       return false;
     });
   });
@@ -96,9 +101,19 @@
   $(function() {
     $("button").click(function() {
       $('#sermons').hide();
-      $('#noResults').hide();
       $('#spinner').show();
-      $.get(this.action, {year: $(this).text()}, function(){$('#spinner').hide(); $('#sermons').show();$('#noResults').show();$('input:text').val('');}, "script");
+      $.ajax({
+        method: 'GET',
+        url: this.action,
+        data: {year: $(this).text()},
+        dataType: "script"
+      })
+      .done(function(){
+        $('#spinner').hide();
+        $('#sermons').show();
+        $('input:text').val('');
+      });
+      return false;
     });
   });
 </script>
