--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -16,7 +16,7 @@
 </div>
 <div class="d-flex justify-content-center">
   <% @years.reverse.each do |year| %>
-    <button class="yellow-btn" style="margin-right: 4px" id="year" action="/preaching"><%= year %></button>
+    <button class="yellow-btn" style="margin-right: 4px" id="year"><%= year %></button>
   <% end %>
 </div>
 <div class="d-flex align-items-center">
@@ -86,7 +86,7 @@
       $('#spinner').show();
       $.ajax({
         method: 'GET',
-        url: this.action,
+        url: '/preaching',
         data: $(this).serialize(),
         dataType: "script"
       })
@@ -104,7 +104,7 @@
       $('#spinner').show();
       $.ajax({
         method: 'GET',
-        url: this.action,
+        url: '/preaching',
         data: {year: $(this).text()},
         dataType: "script"
       })
