--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -16,7 +16,7 @@
 </div>
 <div class="d-flex justify-content-center">
   <% @years.reverse.each do |year| %>
-    <button class="yellow-btn" style="margin-right: 4px" id="year"><%= year %></button>
+    <button class="yellow-btn y-btn" style="margin-right: 4px" id="year"><%= year %></button>
   <% end %>
 </div>
 <div class="d-flex align-items-center">
@@ -99,7 +99,7 @@
   });
   
   $(function() {
-    $("button").click(function() {
+    $(".y-btn").click(function() {
       $('#sermons').hide();
       $('#spinner').show();
       $.ajax({
