--- a/app/views/preaching/_sermons.html.erb
+++ b/app/views/preaching/_sermons.html.erb
@@ -11,7 +11,7 @@
     <td>
       <div class="d-flex justify-content-between">
         <div style="width: 16px">
-          <%= link_to sermon.mp3.url, class: "download", download: '', id: sermon.id do %>
+          <%= link_to sermon.mp3, class: "download", download: '', id: sermon.id do %>
             <%= image_tag "icons/mp3_16x16.gif"%>
           <% end %>
         </div>
