--- a/app/views/preaching/_sermons_search.html.erb
+++ b/app/views/preaching/_sermons_search.html.erb
@@ -10,7 +10,7 @@
       <td><%= sermon.preacher %></td>
       <td>
         <div>
-          <%= link_to sermon.mp3.url, class: "download", download: '', id: sermon.id do %>
+          <%= link_to sermon.mp3, class: "download", download: '', id: sermon.id do %>
             <%= image_tag "icons/mp3_16x16.gif"%>
           <% end %>
           <% if !sermon.ytube_id.blank? %>
