--- a/app/views/preaching/_new_form_callback.html.erb
+++ b/app/views/preaching/_new_form_callback.html.erb
@@ -1,10 +1,13 @@
 <%= form_for @sermon, url: sermons_path, method: 'POST',  html: { class: 'directUpload', data: { 'form-data' => (@s3_direct_post.fields), 'url' => @s3_direct_post.url, 'host' => URI.parse(@s3_direct_post.url).host } } do |f| %>
+  <div class="form-group">
+    <%= f.label :mp3 %>
+    <%= f.file_field :mp3, class: "directField"%>
+  </div>
+<% end %>
+<%= form_for @sermon, url: sermons_path, method: 'POST' do |f| %>
+<%= f.hidden_field :mp3 , id: "mp3Key" %>
   <div class="row">
     <div class="col-6">
-      <div class="form-group">
-        <%= f.label :mp3 %>
-        <%= f.file_field :mp3, class: "directField"%>
-      </div>
       <div class="form-group">
         <%= f.label :datetime %>
         <%= f.datetime_local_field :datetime, class: "form-control form-control-sm", autofocus: true  %>
@@ -55,7 +58,7 @@
   $(function() {
       var fileInput    = $('.directField');
       var form         = $(fileInput.parents('form:first'));
-      var submitButton = form.find('input[type="submit"]');
+      var submitButton = $('input[type="submit"]');
       var progressBar  = $("<div class='load-bar'></div>");
       var barContainer = $("<div class='progress'></div>").append(progressBar);
       fileInput.after(barContainer);
@@ -90,8 +93,7 @@
         var url   = '//' + form.data('host') + '/' + key;
 
         // create hidden field
-        var input = $("<input />", { type:'hidden', name: fileInput.attr('name'), value: url })
-        form.append(input);
+        $('#mp3Key').val(url);
       },
       fail: function(e, data) {
         submitButton.prop('disabled', false);
