--- a/app/views/preaching/_update_form.html.erb
+++ b/app/views/preaching/_update_form.html.erb
@@ -1,9 +1,15 @@
-<%= form_for @sermon, url: "/sermons/#{@sermon.id}", method: :patch do |f| %>
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-body">
-          <h5 class="modal-title" id="exampleModalLabel">Update Sermon</h5>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <h5 class="modal-title" id="exampleModalLabel">Update Sermon</h5>
+        <%= form_for @sermon, url: sermons_path, method: 'POST',  html: { class: 'directUpload', data: { 'form-data' => (@s3_direct_post.fields), 'url' => @s3_direct_post.url, 'host' => URI.parse(@s3_direct_post.url).host } } do |f| %>
+          <div class="form-group">
+            <%= f.label :mp3 %>
+            <%= f.file_field :mp3, class: "directField"%>
+          </div>
+        <% end %>
+        <%= form_for @sermon, url: "/sermons/#{@sermon.id}", method: :patch do |f| %>
           <div class="row">
             <div class="col-6">
               <div class="form-group">
@@ -34,7 +40,7 @@
               </div>
               <div class="form-group">
                 <%= f.label :mp3 %>
-                <%= f.text_field :mp3, class: "form-control form-control-sm", type: "text" %>
+                <%= f.text_field :mp3, class: "form-control form-control-sm", type: "text", id: "mp3Key" %>
               </div>
               <div class="form-group">
                 <%= f.label :format %>
@@ -55,8 +61,60 @@
               </div>
             </div>
           </div>
-        </div>
+        <% end %>
       </div>
     </div>
   </div>
-<% end %>
+</div>
+
+<script>
+  $(function() {
+      var fileInput    = $('.directField');
+      var form         = $(fileInput.parents('form:first'));
+      var submitButton = $('input[type="submit"]');
+      var progressBar  = $("<div class='load-bar'></div>");
+      var barContainer = $("<div class='progress'></div>").append(progressBar);
+      fileInput.after(barContainer);
+      $('.directUpload').fileupload({
+      fileInput:       fileInput,
+      url:             form.data('url'),
+      type:            'POST',
+      autoUpload:       true,
+      formData:         form.data('form-data'),
+      paramName:        'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
+      dataType:         'XML',  // S3 returns XML if success_action_status is set to 201
+      replaceFileInput: false,
+      progressall: function (e, data) {
+        var progress = parseInt(data.loaded / data.total * 100, 10);
+        progressBar.css('width', progress + '%')
+      },
+      start: function (e) {
+        submitButton.prop('disabled', true);
+        barContainer.show();
+        progressBar.
+          css('background', 'green').
+          css('display', 'block').
+          css('width', '0%').
+          text("Loading...");
+      },
+      done: function(e, data) {
+        submitButton.prop('disabled', false);
+        progressBar.text("Uploading done");
+
+        // extract key and generate URL from response
+        var key   = $(data.jqXHR.responseXML).find("Key").text();
+        var url   = '//' + form.data('host') + '/' + key;
+
+        // create hidden field
+        $('#mp3Key').val(url);
+      },
+      fail: function(e, data) {
+        submitButton.prop('disabled', false);
+
+        progressBar.
+          css("background", "red").
+          text("Failed");
+      }
+    });
+  });
+</script>
