--- a/app/views/preaching/_new_form.html.erb
+++ b/app/views/preaching/_new_form.html.erb
@@ -12,3 +12,9 @@
   </div>
 </div>
 <% end %>
+
+<% if params[:modal] == "open" %>
+  <script>
+    $('#sForm').modal('toggle')
+  </script>
+<% end %>
