--- a/app/views/preaching/_update_form.html.erb
+++ b/app/views/preaching/_update_form.html.erb
@@ -4,25 +4,31 @@
       <div class="modal-body">
         <h5 class="modal-title" id="exampleModalLabel">Update Sermon</h5>
         <%= form_for @sermon, url: sermons_path, method: 'POST',  html: { class: 'directUpload', data: { 'form-data' => (@s3_direct_post.fields), 'url' => @s3_direct_post.url, 'host' => URI.parse(@s3_direct_post.url).host } } do |f| %>
-          <div class="form-group">
-            <%= f.label :mp3 %>
-            <%= f.file_field :mp3, class: "directField" %>
+           <div class="form-group">
+            <label class="sky-btn">
+              Upload .mp3 <%= f.file_field :mp3, style: 'display: none;', class: "directField" %>
+            </label>
+            <div class="progress mt-3" style="display: none" height="30px"></div>
           </div>
         <% end %>
         <%= form_for @sermon, url: "/sermons/#{@sermon.id}", method: :patch do |f| %>
           <div class="row">
             <div class="col-6">
               <div class="form-group">
+                <%= f.label :mp3 %>
+                <%= f.text_field :mp3 , class: "form-control form-control-sm", id: "mp3Key", readonly: true %>
+              </div>
+              <div class="form-group">
                 <%= f.label :datetime %>
-                <%= f.datetime_local_field :datetime, class: "form-control form-control-sm" %>
+                <%= f.datetime_local_field :datetime, class: "form-control form-control-sm", autofocus: true  %>
               </div>
               <div class="form-group">
                 <%= f.label :title %>
-                <%= f.text_field :title, class: "form-control form-control-sm", type: "text", placeholder: "Title of Sermon", autofocus: true %>
+                <%= f.text_field :title, class: "form-control form-control-sm", type: "text", placeholder: "Title of Sermon" %>
               </div>
               <div class="form-group">
                 <%= f.label :preacher %>
-                <%= f.text_field :preacher, class: "form-control form-control-sm", type: "text", placeholder: "Preacher" %>
+                <%= f.text_field :preacher, class: "form-control form-control-sm", type: "text", placeholder: "Preacher", value: "Pastor Anderson" %>
               </div>
               <%= f.label :ytube_id, "YouTube ID" %>
               <div class="input-group input-group-sm">
@@ -36,11 +42,7 @@
               </div>
               <div class="form-group">
                 <%= f.label :location %>
-                <%= f.text_field :location, class: "form-control form-control-sm", type: "text", placeholder: "Location" %>
-              </div>
-              <div class="form-group">
-                <%= f.label :mp3 %>
-                <%= f.text_field :mp3, class: "form-control form-control-sm", type: "text", id: "mp3Key" %>
+                <%= f.text_field :location, class: "form-control form-control-sm", type: "text", placeholder: "Location", value: "Faithful Word Baptist Church" %>
               </div>
               <div class="form-group">
                 <%= f.label :format %>
@@ -52,13 +54,17 @@
                   <%= image_tag 'fire.gif' %> Hard
                 <% end %>
               </div>
-            <%= f.submit "Update", class: "sky-btn" %>
             </div>
             <div class="col-6">
               <div class="form-group">
                 <%= f.label :transcript %>
                 <%= f.text_area :transcript, class: "form-control form-control-sm", rows: 35 %>
               </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <%= f.submit "Update", class: "sky-btn" %>
             </div>
           </div>
         <% end %>
@@ -69,12 +75,9 @@
 
 <script>
   $(function() {
-      var fileInput    = $('.directField');
-      var form         = $(fileInput.parents('form:first'));
-      var submitButton = $('input[type="submit"]');
-      var progressBar  = $("<div class='load-bar'></div>");
-      var barContainer = $("<div class='progress'></div>").append(progressBar);
-      fileInput.after(barContainer);
+    var fileInput    = $('.directField');
+    var form         = $(fileInput.parents('form:first'));
+    var submitButton = $('input[type="submit"]');
       $('.directUpload').fileupload({
       fileInput:       fileInput,
       url:             form.data('url'),
@@ -86,34 +89,27 @@
       replaceFileInput: false,
       progressall: function (e, data) {
         var progress = parseInt(data.loaded / data.total * 100, 10);
-        progressBar.css('width', progress + '%')
+        $('.progress-bar').css('width', progress + '%').text(progress + '%');
       },
       start: function (e) {
         submitButton.prop('disabled', true);
-        barContainer.show();
-        progressBar.
-          css('background', 'green').
-          css('display', 'block').
-          css('width', '0%').
-          text("Loading...");
+        $('.progress').show();
+        $('.progress').html("<div class='progress-bar'></div>");
       },
       done: function(e, data) {
         submitButton.prop('disabled', false);
-        progressBar.text("Uploading done");
-
+        $('.progress-bar').text("Uploading done");
+  
         // extract key and generate URL from response
         var key   = $(data.jqXHR.responseXML).find("Key").text();
         var url   = '//' + form.data('host') + '/' + key;
-
+  
         // create hidden field
         $('#mp3Key').val(url);
       },
       fail: function(e, data) {
         submitButton.prop('disabled', false);
-
-        progressBar.
-          css("background", "red").
-          text("Failed");
+        $('.progress-bar').css("background", "red").text("Failed");
       }
     });
   });
