--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <div class="d-flex justify-content-center">
-  <% @years.reverse.each do |year| %>
+  <% (2006..Time.current.year).to_a.reverse.each do |year| %>
     <button class="yellow-btn y-btn" style="margin-right: 4px" id="year"><%= year %></button>
   <% end %>
 </div>
